--- a/MovieDB/Base.lproj/Main.storyboard
+++ b/MovieDB/Base.lproj/Main.storyboard
@@ -131,7 +131,7 @@
                                                 <color key="textColor" red="0.31372549019607843" green="0.31372549019607843" blue="0.31372549019607843" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="n3e-1h-vKM">
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="n3e-1h-vKM">
                                                 <rect key="frame" x="0.0" y="21.5" width="382" height="270.5"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3j3-bs-MR2">
@@ -217,6 +217,126 @@
             </objects>
             <point key="canvasLocation" x="1957.9710144927537" y="133.92857142857142"/>
         </scene>
+        <!--TV-->
+        <scene sceneID="Nnu-cL-tk5">
+            <objects>
+                <viewController id="ul2-Q4-56u" customClass="TVSerieViewController" customModule="MovieDB" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PAv-0Q-PMG">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CpN-zT-ZQ3">
+                                <rect key="frame" x="0.0" y="140" width="414" height="673"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b68-Gb-Y1v">
+                                        <rect key="frame" x="16" y="0.0" width="382" height="320"/>
+                                        <subviews>
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4Ft-7A-oqh">
+                                                <rect key="frame" x="0.0" y="0.0" width="382" height="320"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uuW-LB-bTs">
+                                                    <size key="itemSize" width="160" height="280"/>
+                                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                </collectionViewFlowLayout>
+                                                <cells>
+                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="EXH-qM-FK1">
+                                                        <rect key="frame" x="0.0" y="20" width="160" height="280"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="hcg-bm-lWt">
+                                                            <rect key="frame" x="0.0" y="0.0" width="160" height="280"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        </collectionViewCellContentView>
+                                                    </collectionViewCell>
+                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="0Em-gr-nRy">
+                                                        <rect key="frame" x="170" y="20" width="160" height="280"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="nUA-sc-WeB">
+                                                            <rect key="frame" x="0.0" y="0.0" width="160" height="280"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        </collectionViewCellContentView>
+                                                    </collectionViewCell>
+                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8uy-MR-KmP">
+                                                        <rect key="frame" x="340" y="20" width="160" height="280"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="L1B-61-WOM">
+                                                            <rect key="frame" x="0.0" y="0.0" width="160" height="280"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        </collectionViewCellContentView>
+                                                    </collectionViewCell>
+                                                </cells>
+                                            </collectionView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstItem="4Ft-7A-oqh" firstAttribute="leading" secondItem="b68-Gb-Y1v" secondAttribute="leading" id="3sx-yX-H78"/>
+                                            <constraint firstAttribute="height" constant="320" id="WAC-8N-vMC"/>
+                                            <constraint firstAttribute="trailing" secondItem="4Ft-7A-oqh" secondAttribute="trailing" id="iI3-Ae-7yd"/>
+                                            <constraint firstAttribute="bottom" secondItem="4Ft-7A-oqh" secondAttribute="bottom" id="q7d-4z-ZYN"/>
+                                            <constraint firstItem="4Ft-7A-oqh" firstAttribute="top" secondItem="b68-Gb-Y1v" secondAttribute="top" id="ujv-9E-Cx2"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lnW-iy-Ebq">
+                                        <rect key="frame" x="16" y="336" width="382" height="337"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Popular" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I14-hz-GvM">
+                                                <rect key="frame" x="0.0" y="0.0" width="382" height="22"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                <color key="textColor" red="0.31372549020000001" green="0.31372549020000001" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="236" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7gk-t3-fqj">
+                                                <rect key="frame" x="0.0" y="38" width="382" height="299"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="299" id="YUe-7g-u15"/>
+                                                </constraints>
+                                            </tableView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="I14-hz-GvM" secondAttribute="trailing" id="38P-nG-EEc"/>
+                                            <constraint firstItem="7gk-t3-fqj" firstAttribute="leading" secondItem="lnW-iy-Ebq" secondAttribute="leading" id="4XF-Tc-n11"/>
+                                            <constraint firstItem="7gk-t3-fqj" firstAttribute="top" secondItem="I14-hz-GvM" secondAttribute="bottom" constant="16" id="6Aq-tz-aed"/>
+                                            <constraint firstItem="I14-hz-GvM" firstAttribute="leading" secondItem="lnW-iy-Ebq" secondAttribute="leading" id="DSz-sl-Be1"/>
+                                            <constraint firstAttribute="bottom" secondItem="7gk-t3-fqj" secondAttribute="bottom" id="TIh-1T-ggF"/>
+                                            <constraint firstItem="I14-hz-GvM" firstAttribute="top" secondItem="lnW-iy-Ebq" secondAttribute="top" id="dx7-vn-dYB"/>
+                                            <constraint firstAttribute="trailing" secondItem="7gk-t3-fqj" secondAttribute="trailing" id="eDZ-9V-U0N"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="lnW-iy-Ebq" firstAttribute="centerX" secondItem="b68-Gb-Y1v" secondAttribute="centerX" id="1d8-3i-Qr5"/>
+                                    <constraint firstItem="b68-Gb-Y1v" firstAttribute="top" secondItem="CpN-zT-ZQ3" secondAttribute="top" id="9Z6-ka-Bq0"/>
+                                    <constraint firstItem="lnW-iy-Ebq" firstAttribute="width" secondItem="b68-Gb-Y1v" secondAttribute="width" id="9bY-0P-Aqq"/>
+                                    <constraint firstItem="lnW-iy-Ebq" firstAttribute="top" secondItem="b68-Gb-Y1v" secondAttribute="bottom" constant="16" id="Fpm-ws-mrn"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="b68-Gb-Y1v" firstAttribute="centerX" secondItem="stu-jd-uq7" secondAttribute="centerX" id="68Z-ad-aDq"/>
+                            <constraint firstItem="stu-jd-uq7" firstAttribute="bottom" secondItem="CpN-zT-ZQ3" secondAttribute="bottom" id="BTx-Lx-J1h"/>
+                            <constraint firstItem="stu-jd-uq7" firstAttribute="trailing" secondItem="CpN-zT-ZQ3" secondAttribute="trailing" id="LUd-CT-ZHr"/>
+                            <constraint firstItem="b68-Gb-Y1v" firstAttribute="width" secondItem="stu-jd-uq7" secondAttribute="width" constant="-32" id="gxa-fg-jer"/>
+                            <constraint firstItem="CpN-zT-ZQ3" firstAttribute="top" secondItem="stu-jd-uq7" secondAttribute="top" id="ix7-Dz-9Yj"/>
+                            <constraint firstItem="CpN-zT-ZQ3" firstAttribute="leading" secondItem="stu-jd-uq7" secondAttribute="leading" id="sGv-un-Ni6"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="stu-jd-uq7"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="TV" id="tGj-u9-HUV"/>
+                    <connections>
+                        <outlet property="popularTVSerieTableView" destination="7gk-t3-fqj" id="Sz0-RR-GfA"/>
+                        <outlet property="popularTVSerieTableViewHeightAnchor" destination="YUe-7g-u15" id="nUT-uZ-HLj"/>
+                        <outlet property="scrollView" destination="CpN-zT-ZQ3" id="vZG-Qd-Mej"/>
+                        <outlet property="tvSerieCollectionView" destination="4Ft-7A-oqh" id="gI0-Zu-mQq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LZk-eX-ZJy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1957.9710144927537" y="900.66964285714278"/>
+        </scene>
         <!--Profile-->
         <scene sceneID="YaN-dt-xBe">
             <objects>
@@ -260,7 +380,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="939-1c-2kp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1957" y="935"/>
+            <point key="canvasLocation" x="1957" y="1584"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="45D-kT-73N">
@@ -276,7 +396,8 @@
                     </tabBar>
                     <connections>
                         <segue destination="lju-k5-1nm" kind="relationship" relationship="viewControllers" id="d2d-uA-Tie"/>
-                        <segue destination="Mx1-Vp-heb" kind="relationship" relationship="viewControllers" id="qEU-yY-hXU"/>
+                        <segue destination="wTK-57-49F" kind="relationship" relationship="viewControllers" id="Lyo-Y8-dC7"/>
+                        <segue destination="Mx1-Vp-heb" kind="relationship" relationship="viewControllers" id="ciJ-yo-nOX"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A7A-dY-tBF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -327,7 +448,29 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EwN-v1-Rlj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1048" y="935"/>
+            <point key="canvasLocation" x="1048" y="1584"/>
+        </scene>
+        <!--TV-->
+        <scene sceneID="qLs-kU-o6w">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wTK-57-49F" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="TV" image="tv" catalog="system" selectedImage="tv.fill" id="Rfi-Pe-Gjz"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="bGO-Fi-Byw">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="24"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ul2-Q4-56u" kind="relationship" relationship="rootViewController" id="QSg-DU-w7c"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XU1-07-sHI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1048" y="901"/>
         </scene>
     </scenes>
     <resources>
@@ -335,5 +478,7 @@
         <image name="tab-movies" width="27" height="26"/>
         <image name="tab-movies-selected" width="25" height="24"/>
         <image name="tab-profile-selected" width="24" height="24"/>
+        <image name="tv" catalog="system" width="64" height="46"/>
+        <image name="tv.fill" catalog="system" width="64" height="46"/>
     </resources>
 </document>
