Detail Screen is done. Added activity indicator view for all necessary views.

--- a/MovieDB/View/CollectionViewCell/NowPlayingMovieCollectionViewCell/NowPlayingMovieCollectionViewCell.xib
+++ b/MovieDB/View/CollectionViewCell/NowPlayingMovieCollectionViewCell/NowPlayingMovieCollectionViewCell.xib
@@ -22,6 +22,12 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="240" id="HbP-b8-J2K"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="24"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Name " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qb1-nC-xC1">
                         <rect key="frame" x="0.0" y="240" width="160" height="40"/>
