--- a/MovieDB/View/CollectionViewCell/PopularMovieCollectionViewCell/PopularMovieCollectionViewCell.xib
+++ b/MovieDB/View/CollectionViewCell/PopularMovieCollectionViewCell/PopularMovieCollectionViewCell.xib
@@ -19,6 +19,12 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MAk-LY-R4X">
                         <rect key="frame" x="0.0" y="0.0" width="160" height="240"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="24"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fTK-Dc-l4V">
                         <rect key="frame" x="112" y="8" width="40" height="40"/>
