CornerRadius is applied to MovieDetailView PosterImageView.

--- a/MovieDB/Base.lproj/Main.storyboard
+++ b/MovieDB/Base.lproj/Main.storyboard
@@ -425,7 +425,7 @@
                                                     <constraint firstAttribute="height" constant="328" id="Xai-ni-Gmm"/>
                                                 </constraints>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8gi-pn-TvN">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8gi-pn-TvN">
                                                 <rect key="frame" x="16" y="246" width="128" height="164"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="164" id="mxB-EM-x5A"/>
@@ -433,7 +433,7 @@
                                                 </constraints>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                        <integer key="value" value="8"/>
+                                                        <integer key="value" value="4"/>
                                                     </userDefinedRuntimeAttribute>
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                                 </userDefinedRuntimeAttributes>
